--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Frode</title>
   </head>
   <body>
-    Hello
+    Hello I'm Frode I come from denmark in Kobenhagen.
   </body>
 </html>
