--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>Frode</title>
   </head>
-  <body>
-    Hello I'm Frode I come from denmark in Copenhagen.
-  </body>
+  <p> <strong>
+    Hello I'm Frode I come from denmark in Copenhagen. </strong>
+  </p>
 </html>
+
