--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Frode</title>
   </head>
   <p> <strong>
-    Hello I'm Frode I come from denmark in Copenhagen. </strong>
+    Hello I'm Frode I come from Denmark in Copenhagen. I like to play FORTNITE and other computer games</strong>
   </p>
 </html>
 
