--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <title>Frode</title>
   </head>
   <p> <strong>
-    Hello I'm Frode I come from Denmark in Copenhagen. I like to play FORTNITE and other computer games</strong>
+    Hello I'm Frode I come from Denmark in Copenhagen. I like to play FORTNITE and other computer games.</strong>
   </p>
+  <div>
+  <p>The is from where i lived in Copenhagen</p>
+<img src=https://static1.squarespace.com/static/532b4471e4b0ed181e218367/t/56c7726e746fb93e226f50bc/1455911548785/?format=500w>
+</div>
 </html>
 
