--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
   <head>
     <title>Frode</title>
   </head>
-  <p> <strong>
-    Hello I'm Frode I come from Denmark in Copenhagen. I like to play FORTNITE and other computer games.</strong>
-  </p>
-  <div>
+  <body>
+    <div>
   <p>The is from where i lived in Copenhagen</p>
-<img src=https://static1.squarespace.com/static/532b4471e4b0ed181e218367/t/56c7726e746fb93e226f50bc/1455911548785/?format=500w>
-</div>
+  <img src=https://static1.squarespace.com/static/532b4471e4b0ed181e218367/t/56c7726e746fb93e226f50bc/1455911548785/?format=500w>
+
+<p>My favourite sport is AFL\Australian Footy League.</p>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/SOocXBeXI5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <p>I like to play FORTNITE and other computer games.</p>
+  <img src=https://pm1.narvii.com/6867/1392e2524a2e373c72971835e351d11e81079a96r1-750-1000v2_hq.jpg> 
+  
+ </div> 
+  </body>
 </html>
 
