--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div>
-  <p>The is from where i lived in Copenhagen</p>
+  <p>The is from where i lived in Copenhagen.But now I live in Australia.</p>
   <img src=https://static1.squarespace.com/static/532b4471e4b0ed181e218367/t/56c7726e746fb93e226f50bc/1455911548785/?format=500w>
 
 <p>My favourite sport is AFL\Australian Footy League.</p>
