--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <p>My favourite sport is AFL\Australian Footy League.</p>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/SOocXBeXI5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <p>My two favourite players are Charlie Cameron and Eric Hipwood </p>     
+      <p>My two favourite players are Charlie Cameron and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
+         
  <iframe width="560" height="315" src="https://www.youtube.com/embed/3Ex9EaszO-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
   <p>I like to play FORTNITE and other computer games.</p>
