--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
   <p>This is from where i lived in Copenhagen.But now I live in Australia.</p>
   <img src=https://static1.squarespace.com/static/532b4471e4b0ed181e218367/t/56c7726e746fb93e226f50bc/1455911548785/?format=500w>
 
-      <p>My favourite sport is AFL\Australian Footy League<sup>*</sup>.</p>
+      <p>My favourite sport is AFL(Australian Footy League.)<sup>*</sup>.</p>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/SOocXBeXI5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <p>My two favourite players are Charlie Cameron and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
+      <p>My three favourite players are Charlie Cameron,Cameron Rayner and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/i2OnZG6VnJk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
  <iframe width="560" height="315" src="https://www.youtube.com/embed/3Ex9EaszO-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/lFMmW-n4yRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>     
+      <p><sup>*</sup>I play for the morningside panthers.</p> 
       
   <p>I like to play FORTNITE and other computer games.</p>
   <img src=https://pm1.narvii.com/6867/1392e2524a2e373c72971835e351d11e81079a96r1-750-1000v2_hq.jpg> 
-      <p><sup>*</sup>I play for the morningside panthers.</p>
+      
  </div> 
   </body>
 </html>
