--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
       <p>My favourite sport is AFL(Australian Footy League.)<sup>*</sup>.</p>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/SOocXBeXI5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-      <p>My four favourite players are Charlie Cameron,Cameron Rayner Mitch Robinson and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
+      <p>My four favourite players are Charlie Cameron,Cameron Rayner Dayne Zorko and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/i2OnZG6VnJk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
  <iframe width="560" height="315" src="https://www.youtube.com/embed/3Ex9EaszO-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/lFMmW-n4yRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/9d12o89RGzA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
       <p><sup>*</sup>I play for the morningside panthers.</p> 
       
