--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
    
       <p><sup>*</sup>I play for the morningside panthers.</p> 
       
-  <p>I like to play FORTNITE and other computer games.</p>
-  <img src=https://pm1.narvii.com/6867/1392e2524a2e373c72971835e351d11e81079a96r1-750-1000v2_hq.jpg> 
+  <p>I like to play Tony Hawks Pro Skater 5 and other computer games.</p>
+  https://images.app.goo.gl/kLHVkh1bAmX2wVna8
       
  </div> 
   </body>
