--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <img src=https://static1.squarespace.com/static/532b4471e4b0ed181e218367/t/56c7726e746fb93e226f50bc/1455911548785/?format=500w>
 
       <p>My favourite sport is AFL(Australian Footy League.)<sup>*</sup>.</p>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/SOocXBeXI5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-      <p>My four favourite players are Charlie Cameron,Cameron Rayner,Lachie Neale and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/i2OnZG6VnJk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+      <p>My four favourite players are Charlie Cameron,Cameron Rayner,Lincoln Mccarthy and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/SOocXBeXI5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/i2OnZG6VnJk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      
  <iframe width="560" height="315" src="https://www.youtube.com/embed/3Ex9EaszO-M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/lFMmW-n4yRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ 
    <iframe width="560" height="315" src="https://www.youtube.com/embed/IzYb1jvx0I4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
    
