--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
       <p>My favourite sport is AFL(Australian Footy League.)<sup>*</sup>.</p>
       <p>My four favourite players are Charlie Cameron,Cameron Rayner,Lincoln Mccarthy and Eric Hipwood from the BRISBANE LIONS which is my favorite team.</p>
+      Charlie Cameron
       <iframe width="560" height="315" src="https://www.youtube.com/embed/SOocXBeXI5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/i2OnZG6VnJk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
